<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/devName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center|bottom"
        android:text="@string/sig"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/password"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/idnumber"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:hint="@string/id_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:onClick="selfDestruct"
        android:text="@string/button1" />

</RelativeLayout>